# NN_from_scratch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/workflows/: codecheck.yaml  tests.yaml
nn_from_scratch/: train_model.py
nn_from_scratch/commiter/: commiter.py
nn_from_scratch/configs/: config.yaml
nn_from_scratch/data/: get_data.py
nn_from_scratch/hardware/: b_prop.c  b_prop.h  f_prop.c  f_prop.h  f_prop_tester.c  makefile  model_fc.c  model_fc.h  tester.c  todo  user_settings.h
nn_from_scratch/hardware/eqcheck/: eqcheck_data.c  eqcheck_data.h
nn_from_scratch/hardware/include/: nn_from_scratch.h
nn_from_scratch/hardware/model/: model.h
nn_from_scratch/hardware/settings/: user_settings.h
nn_from_scratch/hardware/src/: model_fc.c  model_fc.h  partial_model_fc.c  partial_model_fc.h
nn_from_scratch/hardware/test/: inlines.c  inlines.h  main.c  main.s
nn_from_scratch/hardware/true_data/: true_data.c  true_data.h
nn_from_scratch/hardware/util/: activation_functions.c  activation_functions.h  back_prop.c  back_prop.h  config.h  forward_prop.c  forward_prop.h  loss_functions.c  loss_functions.h  model_binding.c  model_binding.h  model_gradients.c  model_gradients.h  track_memory.c  track_memory.h
nn_from_scratch/logger/: easy_logger.py
nn_from_scratch/model/: model.py  model_converter.py  model_generator.py
nn_from_scratch/model/c_templates/: model.c  model.h
nn_from_scratch/model/configs/: model_generator_config.yaml  (+2 more)
nn_from_scratch/models/: model.py
(+16 files in other folders)
