[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nn_from_scratch"
version = "0.0.1"
description = "The main objective is to write a C code that runs (and trains) a fully connected model on microcontrollers."
authors = [
  { name = "Amin, Simon", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["nn_from_scratch"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}
test = {file = ['requirements_test.txt']}

[tool.ruff]
line-length = 120
